--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: selfcode.kr
 description: "지식을 오픈소스처럼 나누는 공간, Selfcode입니다."
-logo_img: "/assets/img/favicon.ico"
-profile_img: "/assets/img/profile.jpeg"
+logo_img: "/assets/img/icon/favicon.ico"
+profile_img: "/assets/img/icon/profile.jpeg"
 
 # Social Links
 email: ssotok12@outlook.com
